assets/styles/default.css
/* Default colours */
:root {
    --background-color: #0fa4af;
    --background-color-secondary:#eee2e2;
    --background-form-color:#2BCDD9;
    --background-form-header-color: #ffffff;
    --language-selector-text-color: #000000;
    --snackbar-color: #1e3a5f;
    --text-color: #2d2d2d;
    --primary-color: #ffffff;
    --secondary-color:#ffffff;
    --hover-color: #ffffff;
    --error-color: #ff5252;
    --error-background: #fff5f5;
    --success-color: #00796b;
    --success-background: #f0fff4;
    --animation-duration: 0.4s;
    --animation-state: running;
}

/* Dark mode colours  #A29BFE #F4A261 */
[data-theme="dark"] {
    --background-color: #1F2833;
    --background-color-secondary: #2C3544;
    --background-form-color: #66fcf1;
    --background-form-header-color: #66fcf1;
    --language-selector-text-color: #000000;
    --snackbar-color: #2fae83;
    --text-color:rgb(4, 3, 3);
    --primary-color: #66FCF1;
    --secondary-color: #A29BFE; 
    --hover-color: #0fa4af;
    --error-color: #ff867c;
    --error-background: #3b0000;
    --success-color: #80cbc4;
    --success-background: #002b24;
}

[data-reduced-motion="true"] {
    --animation-duration: 0s;
    --animation-state: paused;
}

/* Global styles */
body {
    background-color: var(--background-color);
    color: var(--text-color);
    font-family: 'Verdana', sans-serif;
    margin: 0;
    padding: 0;
}

/* Link default style */
a {
    color: var(--primary-color);
    text-decoration: none;
}

a:hover, a:focus {
    color: var(--hover-color);
    background-color: var(--primary-color);
}

/* Error message */
.error {
    color: var(--error-color);
    background-color: var(--error-background);
    padding: 10px;
    border-radius: 4px;
}

/* Success message */
.success {
    color: var(--success-color);
    background-color: var(--success-background);
    padding: 10px;
    border-radius: 4px;
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
  }

